versioned_docs/version-1.6/tutorial/authentication-preference.mdx
---
sidebar_position: 3
title: "Authentication Preference"
slug: "authentication-preference"
excerpt: ""
hidden: false
createdAt: "Fri Jan 20 2023 01:46:49 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Thu Dec 07 2023 01:25:35 GMT+0000 (Coordinated Universal Time)"
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

### Creating a SaaS consumer tenant

First, let's create two tenants for the sample application.

Click “Tenant management” on the side menu.

![01](/img/tutorial/authentication-preference/authentication-preference-01.png)

Click the “Creating a tenant” button to display a pop-up.

The tenant name, addition of representative user, representative email address, representative temporary password, and other tenant attributes added in [Declare Additional Attribute To Tenant](../saas-development-console/declare-additional-attribute-to-tenant)introduced in Guides are displayed.


First one

- tenant name：Tenant sample 1
- memo：This is the attribute information defined in tenant attributes and can be set freely.
- Add representative user：Create a new user
- Representative email address： [saasus-sample-tenant1@example.com](mailto:saasus-sample-tenant1@example.com)
- Representative's temporary password： Password requirements such as G@2qYPQq

![02](/img/tutorial/authentication-preference/authentication-preference-02.png)

The second one

- tenant name：Sample app tenant 2
- memo：This is the attribute information defined in tenant attributes and can be set freely.
- Add representative user：Create a new user
- Representative email address： [saasus-sample-tenant2@example.com](mailto:saasus-sample-tenant2@example.com)
- Representative's temporary password： Password requirements such as irG_l88r

(There is no set rule, so you can enter other values as well.)

![03](/img/tutorial/authentication-preference/authentication-preference-03.png)

You have now created a tenant and one user belonging to that tenant.

### Creating a SaaS user

Now, let's take a look at the user list. Click "User management" from the side menu.

The user you created earlier is registered as the admin (SaaS administrator) role for each tenant and each environment.

![04](/img/tutorial/authentication-preference/authentication-preference-04.png)

The SaaSus Platform allows the concept of an "environment" to be used as a tenant for SaaS users.

For example, in a SaaS like Stripe that primarily uses APIs, SaaS users will need an environment for testing and developing integrations. <br/>
SaaS administrators can now define multiple environments, such as using an environment called a development environment to perform these tasks and an environment called a production environment for actual operations.

![05](/img/tutorial/authentication-preference/authentication-preference-05.png)

:::info
Depending on SaaS, multiple environments may not be necessary, so if you use a single environment, you only need to be aware of the production environment.
:::

Now, let's register one user for each tenant.

Click the "Create a new user" button in the upper right corner to display a popup.

For now, let's register 4 people.

email address: [user1-1@example.com](mailto:user1-1@example.com)  
password： Meets password requirements  
tenant： Tenant sample 1  
username： User1-1

![06](/img/tutorial/authentication-preference/authentication-preference-06.png)

email address: [user1-2@example.com](mailto:user1-2@example.com)  
password： Meets password requirements  
tenant： Tenant sample 1  
username： User1-2

email address: [user2-1@example.com](mailto:user2-1@example.com)  
password： Meets password requirements  
tenant： Sample app tenant 2  
username： User2-1

email address: [user2-2@example.com](mailto:user2-2@example.com)  
password： Meets password requirements  
tenant： Sample app tenant 2  
username： User2-2

![07](/img/tutorial/authentication-preference/authentication-preference-07.png)

I was able to register 4 additional users.

You can also add roles to these users.

:::info
Please check the page below for how to add a role.<br/>
[Adding Role To User](../saas-operation-console/adding-role-to-user)
:::

:::info
The following steps require programming knowledge.
:::

### Setting destination URL after authentication

Based on the domain name you configured, SaaSus Platform generates a login screen. After logging in, the authentication information is transferred to the SaaS side.<br/>
The URL of the SaaS to be taken over must be registered as the Callback URL.

Click "Transition destination after authentication" from the side menu to display the Callback URL setting screen.

Typically, you set the Callback URL based on the URL of the SaaS offering.<br/>
However, since we will be running the sample application locally this time, we will configure it as follows.

For PHP： [http://localhost/callback](http://localhost/callback)

For Next.js： [http://localhost:3000/callback](http://localhost:3000/callback)

![08](/img/tutorial/authentication-preference/authentication-preference-08.png)

### Incorporating an authentication module

Next, include the SaaSus Platform authentication module.

In this application, authentication is required for all URI routes. If authentication is not successful, the application will be unavailable.

If you are checking the operation of the Next.js sample app, create a page that receives the callback.

Create front/src/pages/callback/index.tsx and add the following.

<Tabs>
<TabItem value="typescript" label="Typescript">

```typescript
import Container from '@mui/material/Container'
import { useRouter } from 'next/router'
import { useEffect } from 'react'
import axios from '@/lib/axios'

const Callback = () => {
  const router = useRouter()
  const query = router.query
  const code = query.code as string

  const fetchAuthCredentials = async () => {
    const res = await axios.get(`/api/callback?code=${code}`)
    // Save the received JWT to Local Storage
    const idToken = res.data.id_token as string
    localStorage.setItem('SaaSusIdToken', idToken)
    router.replace('/board')
  }

  useEffect(() => {
    if (router.isReady) {
      if (code) {
        fetchAuthCredentials()
      }
    }
  }, [query, router])

  return <Container disableGutters></Container>
}

export default Callback
```

</TabItem>
</Tabs>

Here, we obtain authentication information from the API based on the temporary code that was passed, store the id_token in the browser's local storage, and redirect to the board page.

Next, we'll add this saved token to the header when making an API call later.

Edit front/src/pages/board/index.tsx.

<Tabs>
<TabItem value="typescript" label="Typescript">

```typescript
import { MessageBoard } from '@/components/MessageBoard'
import { formValueFormat } from '@/const/formTemplate'
import Container from '@mui/material/Container'
import useSWR, { useSWRConfig } from 'swr'
import axios from '@/lib/axios'

const Board = () => {
 const { mutate } = useSWRConfig()
 const fetcher = (url: string) => {
   // Get the JWT from Local Storage, attach it as a Bearer token in the header, and make an API call
   const token = localStorage.getItem('SaaSusIdToken')
   if (!token) return ''
   return axios
     .get(url, {
       headers: {
         Authorization: `Bearer ${token}`,
       },
     })
     .then((res) => res.data)
 }
 const { data: tenant_name, error: tenant_error } = useSWR(
   `/api/tenant`,
   fetcher
 )
 const { data: messages, error } = useSWR(`/api/board`, fetcher, {
   refreshInterval: 5000,
 })
 if (error || tenant_error) return <div>failed to load</div>
 if (!messages || !tenant_name) return <div>loading...</div>

 const handleSubmit = async (value: string) => {
   const formValue = { ...formValueFormat, message: value }
   // Immediately update local data without revalidation
   mutate('/api/board', [...messages, formValue], false)
   // Send a request to the API to update
   // Get the JWT from Local Storage, attach it as a Bearer token in the header, and make an API call
   const token = localStorage.getItem('SaaSusIdToken')
   await axios.post('/api/post', formValue, {
     headers: {
       Authorization: `Bearer ${token}`,
     },
   })
 }

 return (
   <Container disableGutters>
     <MessageBoard
       messages={messages}
       tenant_name={tenant_name}
       onSubmit={handleSubmit}
     />
   </Container>
 )
}

export default Board
```

</TabItem>
</Tabs>

This time, there are only a few API calls, so we're simply specifying them directly when calling axios, but it might be better to standardize them using middleware or something similar.

Next, we'll adjust the backend.

The current situation is

For PHP, use api/routes/web.php

For Next.js, use api/app.ts

The authentication function is used in this section, so replace it with the SaaSus authentication function.

This section

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
Route::middleware('auth')->group(function () {
   Route::get('/', function () {
       return view('welcome');
   });
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');
});

require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
app.use(
  session({
    secret: "secret",
    resave: false,
    saveUninitialized: false,
  })
);
app.use(passport.initialize());
app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

change

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
// Route::middleware('auth')->group(function () {
//     Route::get('/', function () {
//         return view('welcome');
//     });
// Use SaaSus SDK standard Auth Middleware
Route::middleware(\AntiPatternInc\Saasus\Laravel\Middleware\Auth::class)->group(function () {
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');

   Route::redirect('/', '/board');
});

// require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
import { AuthMiddleware } from "saasus-sdk";
...
// app.use(
//   session({
//     secret: "secret",
//     resave: false,
//     saveUninitialized: false,
//   })
// );
app.use(
  ["/chat", "/api/board", "/api/post", "/api/plan", "/api/tenant"],
  AuthMiddleware
);
// app.use(passport.initialize());
// app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

Do it like this.

Next, prepare an outlet for the callback from the authentication screen. 

Earlier, in the SaaSus development console, we defined the callback destination as

For PHP, [http://localhost/callback](http://localhost/callback)

For Next.js, [http://localhost:3000/callback](http://localhost:3000/callback)

So we will make it possible to receive the callback at /callback.

Similarly, for PHP, add the following to the last line of api/routes/web.php.

For Next.js, create api/routes/callback.ts and write the following.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
// Use the SaaSus SDK standard Callback Controller to put the JWT into Cookies or Local Storage
Route::get('/callback', 'AntiPatternInc\Saasus\Laravel\Controllers\CallbackController@index');
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
import express from "express";
const router = express.Router();
import { CallbackRouteFunction } from "saasus-sdk";

router.get("/", CallbackRouteFunction);

export { router };
```

```mdx-code-block
</TabItem>
</Tabs>
```

Furthermore, to be able to use the View provided by the SaaSus SDK,

in PHP, add the path to api/config/view.php.

In Next.js, create api/views/callback.ejs and write the following.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   'paths' => [
       resource_path('views'),
       # ↓Add this line: Directory of views provided by SaaSus SDK
       resource_path('../vendor/saasus-platform/saasus-sdk-php/src/Laravel/Views'),
   ],
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```html
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    <title>Auth Callback</title>
  </head>

  <body>
    <script>
      location.href = "/chat";
    </script>
  </body>
</html>
```

```mdx-code-block
</TabItem>
</Tabs>
```

With the settings up to this point, the authentication information set in SaaSus Platform will be passed as part of the request when the application's Controller is reached.

For PHP, add a Request argument to index in api/app/Http/Controllers/MessageController.php and use dd to check if userinfo is included in $request.

For Next.js, add a Request argument to getChats in api/controllers/chat.ts and use console.log to check if userinfo is included in req.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
       // Check whether user information is being passed from SaaSus Platform
       dd($request->userinfo);
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getChats = async (req: Request, res: Response) => {
  // Check whether user information is being passed from SaaSus Platform
  console.log(req.userinfo);
```

```mdx-code-block
</TabItem>
</Tabs>
```

Up to this point, we have established the basics of collaboration.

Log in from SaaSus Platform and check the operation.

### Verify SaaSus SDK integration

Display the login screen created with SaaSus Platform.

Please display the login screen of the domain you have set, such as [https://auth.sample.saasus.jp](https://auth.sample.saasus.jp).

![09](/img/tutorial/authentication-preference/authentication-preference-09.png)

When you log in with the user email address and password you created earlier, you will be redirected to the URL you set in Callback URL along with your credentials.

For example, let's log in as [user1-1@example.com](mailto:user1-1@example.com).

If the above code actually works, you should see something like this after logging in.

```php
array:3 [▼
  "email" => "user1-1@example.com"
  "id" => "f6a02019-1306-431f-b93d-3a756b312481"
  "tenants" => array:1 [▼
    0 => array:7 [▼
      "back_office_staff_email" => "saasus-sample-tenant1@example.com"
      "completed_sign_up" => true
      "envs" => array:1 [▼
        0 => array:3 [▼
          "id" => 1
          "name" => "dev"
          "roles" => array:1 [▼
            0 => array:2 [▼
              "display_name" => "General users"
              "role_name" => "user"
            ]
          ]
        ]
      ]
      "id" => "7b639774-6fba-4b26-b580-f3d755876a4b"
      "name" => "Tenant sample 1"
      "plan_id" => "bc011444-a9f1-41c0-8251-bc8928b09ee7"
      "user_attribute" => array:1 [▼
        "username" => "user1-1"
      ]
    ]
  ]
]
```

You can see that the user information and tenant information that were set in SaaSus Platform earlier can be obtained on the application side.

The redirect destination URL is now received by the SaaSus SDK standard Callback process ([http://localhost/callback](http://localhost/callback)), and in that process, the browser's Local Storage or remember authentication information in a cookie.

Then, the SaaSus SDK's Auth Middleware uses the SaaSus Platform to verify the authentication information, retrieve the user information, and pack it into the Request object.

Processing then moves to the application's controller, so at this point the application already has information about the logged-in person.

Now, let's use this information to make our bulletin board application multi-tenant-enabled.

:::info
The automatically generated login screen can display the service name and icon, and you can set links to the terms of use and privacy policy.<br/>
For the setting method, please check [Customizing Authentication Pages such as Login Pages](../saas-development-console/authorization-screen-customize).
:::

### Multi-tenancy of sample application

For PHP, api/app/Http/Controllers/MessageController.php

For Next.js, api/controllers/chat.ts

This is the main process, so let's add the process to make it multi-tenant compatible here.

First, change the display part.
Let's rewrite the whole part below.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
       // Various user information and tenant information are entered in $request->userinfo, so use it
       $messages = Message::where('tenant_id', $request->userinfo['tenants'][0]['id'])->get();
       return view('messageBoard.index', ['messages' => $messages, 'plans' => $this::PLANS, 'tenant_name' => $request->userinfo['tenants'][0]['name']]);
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getChats = async (req: Request, res: Response) => {
  try {
    const messages = await db.Messages.findAll({
      where: {
        tenant_id: req.userInfo?.tenants[0].id,
      },
    });
    res.render("chat", {
      messages: messages,
      plans: PLANS,
      tenant_name: TENANT_NAME,
    });
  } catch (error) {
    console.error(error);
    res.redirect("/chat");
  }
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

In this way, the DB will be searched based on the tenant ID that has been passed.

Next is the posting part.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function post(Request $request)
   {
       $validated = $request->validate([
           'message' => 'required|max:255'
       ]);

       // Get various information from userinfo of $request and use it for judgment
       $message = Message::create([
            'tenant_id' => $request->userinfo['tenants'][0]['id'],
            'user_id' => $request->userinfo['tenants'][0]['user_attribute']['username'],
            'message' => $request->message,
        ]);

       $request->session()->regenerateToken();
       return redirect()->route('board');
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const postChats = async (req: Request, res: Response) => {
  const mes = req.body.message;
  const tenantId = req.userInfo?.tenants[0].id || "";
  const userName =
    req.userInfo?.tenants[0].user_attribute.username || "test user";
  try {
    await db.Messages.create({
      tenant_id: tenantId,
      user_id: userName,
      message: mes,
    });
  } catch (error) {
    console.error(error);
  }
  res.redirect("/chat");
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

Based on the passed user attributes, the tenant ID and user name are stored as a set.

Let's try displaying the user ID on the screen display as well.

For PHP, edit api/resources/views/messageBoard/index.blade.php.

Around line 32, change $message->user->name to $message->user_id.

Before correction：

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user->name }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

After correction：

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user_id }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

No modifications are required for Next.js.

Multi-tenant support is now possible.

Now, let's log in and try it out.

As before, log in from the login screen created with SaaSus Platform.

When you log in, you will see that the tenant name has changed to the one you set earlier in the SaaS development console.

![10](/img/tutorial/authentication-preference/authentication-preference-10.png)

I don't have any data yet, so I'll post some.

![11](/img/tutorial/authentication-preference/authentication-preference-11.png)

I have confirmed that the username is also displayed.

Now go back to the login screen, log in as [user1-2@example.com](mailto:user1-2@example.com), and try posting some posts.

![12](/img/tutorial/authentication-preference/authentication-preference-14.png)

Of course it will be reflected on the screen.

Now, let's log in as the user of the other tenant [user2-1@example.com](mailto:user2-1@example.com).

![13](/img/tutorial/authentication-preference/authentication-preference-13.png)

You can see that the tenant name display has changed and the contents are now empty.

I have confirmed that I can only access information for my own tenant.

Now, after making a few posts in the same way, log in as [user2-2@example.com](mailto:user2-2@example.com) and check that you can display information for the same tenant.

![14](/img/tutorial/authentication-preference/authentication-preference-14.png)

In this way, separation of each tenant is completed.

As for the separation method this time, we used a pool type model to perform separation within the same DB and perform tenant separation using a simple method. Even if you select a tenant separation method according to your requirements, such as schema separation or database separation, you can similarly obtain and implement tenant information using the SaaSus SDK.

Now that we have separated the tenants, let's implement the fee-related functions.

Let's implement the first steps of pricing, usage measurement, and billing. 

For billing, we use a billing SaaS called Stripe. If you don't use Stripe, skip the billing part.
